kubernetes/deploy.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "stationapi-prod"
  namespace: "default"
  labels:
    app: "stationapi-prod"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "stationapi-prod"
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "stationapi-prod"
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
      - name: "stationapi-1"
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        image: "gcr.io/trainlcd/github.com/trainlcd/stationapi:latest"
      - name: "gce-proxy-2"
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        image: "gcr.io/cloudsql-docker/gce-proxy:latest"
        command:
          - /cloud_sql_proxy
          - -instances=trainlcd:asia-northeast1:root=tcp:3306
