kubernetes/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationapi-dev
spec:
  selector:
    matchLabels:
      app: stationapi-dev
  template:
    metadata:
      labels:
        app: stationapi-dev
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
      - name: stationapi-dev
        image: gcr.io/trainlcd/github.com/trainlcd/stationapi_dev
        ports:
        - containerPort: 50051
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=trainlcd:asia-northeast1:stationapi=tcp:3306"
        securityContext:
          runAsNonRoot: true
