kubernetes/deployment.staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationapi-stg
spec:
  selector:
    matchLabels:
      app: stationapi-stg
  template:
    metadata:
      labels:
        app: stationapi-stg
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
      - name: stationapi-stg
        image: gcr.io/trainlcd/github.com/trainlcd/stationapi_stg
        ports:
        - containerPort: 3000
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=trainlcd:asia-northeast1:stationapi=tcp:3306"
        securityContext:
          runAsNonRoot: true
