kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationapi
spec:
  selector:
    matchLabels:
      app: stationapi
  template:
    metadata:
      labels:
        app: stationapi
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
      - name: stationapi
        image: gcr.io/trainlcd/github.com/trainlcd/stationapi
        ports:
        - containerPort: 3000
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=trainlcd:asia-northeast1:root=tcp:3306"
        securityContext:
          runAsNonRoot: true
