kubernetes/ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stationapi-dev
  annotations:
      kubernetes.io/ingress.class: gce
      kubernetes.io/ingress.allow-http: "false"
      kubernetes.io/ingress.global-static-ip-name: stationapi-dev-addr
      networking.gke.io/managed-certificates: managed-cert-both
spec:
  tls:
  - hosts:
      - stationapi.endpoints.trainlcd.cloud.goog
    secretName: esp-ssl
  defaultBackend:
    service:
      name: stationapi-dev
      port:
        number: 443
